--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,50 @@ body {
   background-color: rgb(234, 234, 234) !important;
 }
 
+/*home page styles*/
+
+.masthead {
+  background-image: linear-gradient(
+          135deg,
+          rgb(24, 42, 115) 0%,
+          rgb(33, 138, 174) 69%,
+          rgb(32, 167, 172) 89%
+  ) !important;
+}
+
+.masthead.segment {
+  /* min-height: 700px; */
+  height: 100vh;
+  padding: 1em 0 !important;
+}
+
+.masthead .ui.menu .ui.button,
+.ui.menu a.ui.inverted.button {
+  margin-left: 0.5em;
+}
+
+.masthead h1.ui.header {
+  margin-top: 3em;
+  margin-bottom: 0;
+  font-size: 4em;
+  font-weight: normal;
+}
+
+.masthead h2 {
+  font-size: 1.7em;
+  font-weight: normal;
+}
+
+.footer.segment {
+  padding: 5em 0;
+}
+
+.secondary.inverted.pointing.menu {
+  border: none;
+}
+
+/*end home page styles*/
+
 /* navbar styles */
 
 .ui.menu .item img.logo {
@@ -30,10 +74,6 @@ body {
   margin-top: 7em;
 } */
 
-.ui.center.aligned.segment.attendance-preview {
-  background-color: #f5f5f5;
-}
-
 .masthead .ui.menu .ui.button,
 .ui.menu a.ui.inverted.button {
   margin-left: 0.5em;
@@ -54,7 +94,7 @@ body {
 }
 
 .messages {
-  height: 37vh;
+  height: 39vh;
   overflow-y: scroll;
 }
 
